error handling with my errorclasses